trunk/Archive2/ce/fe8e537c401f92/output
main.cpp: In function 'int main()':
main.cpp:16:13: error: could not convert 'name' from 'std::__cxx11::string {aka std::__cxx11::basic_string<char>}' to 'dog'
     Foo(name);
             ^
